# dataviewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  spec.md  vite.config.ts
docs/: README.md  agent-cli-handoff.md  bug-export-workflow-and-layout.md  bug-import-review-not-cleared-after-remove-all-sources.md  cli-pipeline-usage.md  cli-sample-selection-usage.md  dataset-balance-design-v0.2.0.md  dataset-map-onnx-runtime.md  export-time-data-balance-analysis-v0.2.0.md  export-time-data-balance-backlog-v0.2.0.md  functional-workflow.md  implementation-plan-v0.2.0.md  implementation-plan.md  module-architecture.md  product-highlights.md  qa-sample-selection.md  qa-umap-projection.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.1.zh-TW.md  release-notes-v0.1.2.md  release-notes-v0.1.2.zh-TW.md  release-notes-v0.1.3.md  release-notes-v0.1.3.zh-TW.md  software-stack.md  spec-auto-sample-selection.md  teammate-install-guide-zh-TW.md  ui-mockup.md  user-guide-zh-TW.md  windows-release-sop.md
scripts/: generate-app-icon.ps1  requirements-embeddings.txt  requirements-sampling.txt  requirements-umap.txt  run_coco_ingest.py  run_generate_embeddings.py  run_pipeline.py  run_sample_selection.py  run_umap_projection.py  validate_rfdetr_coco_export.py  validate_yolo_export.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cvat_api.rs  db.rs  lib.rs  main.rs  mock.rs  models.rs  paths.rs  workspace_service.rs
src-tauri/src/commands/: browser.rs  cvat.rs  export.rs  mod.rs  quality.rs  sampling.rs  workspace.rs
src-tauri/src/embedding/: jobs.rs  mod.rs  preprocess.rs  projection.rs  providers.rs  runtime.rs
src/app/: router.tsx
src/lib/: api.ts  mock-data.ts  tauri.ts
src/state/: useWorkspaceStore.ts
(+21 files in other folders)
